objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_contributed_amount__c</fullName>
        <label>Total contributed  amount</label>
        <summarizedField>Expense_Member__c.Contributed_Amount__c</summarizedField>
        <summaryForeignKey>Expense_Member__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Eid-{0000}</displayFormat>
        <label>Expense Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Checkamount</fullName>
        <active>true</active>
        <errorConditionFormula>Total_contributed_amount__c  &gt;  Amount__c</errorConditionFormula>
        <errorMessage>ooopss!!!! error ...Totalcontribution cannot be greater than Amount......</errorMessage>
    </validationRules>
</CustomObject>